# clockquotes

./: .gitignore  AGENTS.md  LICENSE  README.md  books.json  build.py  pyproject.toml  quotes.csv  quotes.json  quotes.jsonl  stats.json
docs/: build-notes.md  enrichment.md  sources.md  themed-quotes.md
sources/: README.md  fetch_guardian.py  guardian-2011.csv  urdu.jsonl
sources/clock/: scifi-fantasy.csv
sources/comic/: calvin-hobbes.jsonl
sources/puzzle/: logic-mystery.jsonl  math.jsonl  riddle-wordplay.jsonl  science-spatial.jsonl
sources/tv/: bluey.jsonl
src/: build.py  build_quotes.py  clock.py  common.py  enrich_books.py  fetch_bluey.py  fetch_calvin_hobbes.py  fetch_guardian.py  flat.py  wayback.py
